# plcairo

./: .gitignore  Makefile.in  README  configure.in
examples/: README  arc-negative.pl  arc.pl  clip-image.pl  clip.pl  curve-rectangle.pl  curve-to.pl  dash.pl  fill-and-stroke.pl  fill-style.pl  gradient.pl  image-pattern.pl  image.pl  multi-segment-caps.pl  owlie.pl  rounded-rectangle.pl  set-line-cap.pl  set-line-join.pl  text-align-center.pl  text-extents.pl  text.pl
examples/backends/: gtk-backend.pl  pdf-backend.pl  png-backend.pl  ps-backend.pl  svg-backend.pl
prolog/: plcairo.pl
scripts/: make_pack.sh
src/: Makefile.in  plcairo.c  plcairo.h  plcairo_callbacks.c  plcairo_context.c  plcairo_debug.c  plcairo_device.c  plcairo_error.c  plcairo_font_face.c  plcairo_font_options.c  plcairo_image_surface.c  plcairo_matrix.c  plcairo_path.c  plcairo_pattern.c  plcairo_pdf_surface.c  plcairo_png_surface.c  plcairo_ps_surface.c  plcairo_raster_source.c  plcairo_recording_surface.c  plcairo_region.c  plcairo_scaled_font.c  plcairo_script_surface.c  plcairo_surface.c  plcairo_svg_surface.c  plcairo_tag.c  plcairo_text.c  plcairo_transformation.c  plcairo_types.c  plcairo_version.c
